05_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        # ⚠️ อัปเดต Image Tag เป็นที่คุณเพิ่ง Build
        image: bength/exam-01-server:6.1 
        ports:
        - containerPort: 3001
