07_client_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        # ⚠️ อัปเดตเป็นชื่อ Image ของคุณที่ Push ขึ้น Registry
        image: bength/exam-01-client:2.0
        ports:
        - containerPort: 80
