client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: bength/exam-01-client:1.0 # ⚠️ แก้ชื่อ image เป็นของตัวเอง
        ports:
        - containerPort: 80
