server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: bength/exam-01-server:1.0 # ⚠️ แก้ชื่อ image เป็นของตัวเอง
        ports:
        - containerPort: 3001
