02_mongodb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  # ClusterIP: สำหรับการเชื่อมต่อภายในคลัสเตอร์เท่านั้น
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
