04_server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  # ClusterIP: สำหรับการเข้าถึงภายในคลัสเตอร์ผ่าน Ingress เท่านั้น
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: server
