06_client_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  # ClusterIP: สำหรับการเข้าถึงภายในคลัสเตอร์ผ่าน Ingress เท่านั้น
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: client
