mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  type: NodePort # 👈 ใช้ NodePort เพื่อให้เข้าถึงจากเบราว์เซอร์ได้
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: mongo-express
